[package]
name = "rustrix-term"
version = "0.1.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/hugomf/rustrix-term"
description = "Terminal animation that brings the iconic 'digital rain' effect from The Matrix Movie to your command line"
keywords = ["matrix", "terminal", "rain", "cascade", "animation"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["full"] } 
crossterm = { version = "0.27.0", features = ["event-stream"] }
rand = "0.8"
clap = { version = "4.4.11", features = ["derive"] }
lazy_static = "1.4"
terminal-colorsaurus = "1.0"
futures = "0.3"
